testData/src/error/java/comment/MissingClassComment.java
package error.java.comment;


public class MissingClassComment {
}
